# pytest-sauce

./: .pdm-python  LICENSE  README.md  data.yaml  pyproject.toml  requirements.txt
src/: config.yaml  conftest.py
src/pages/: checkout_page.py  home_page.py  login_page.py  product_page.py
src/tests/: base_test.py  test_checkout.py  test_login.py  test_products.py
src/utils/: config_manager.py  data_loader.py  logger.py
